# ChangeLog for app-admin/hwbrowser
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/hwbrowser/Attic/ChangeLog,v 1.2 2006/09/05 21:52:24 dberkholz Exp $

  05 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  hwbrowser-0.27.ebuild:
  Cleanup compiled python files.

*hwbrowser-0.27 (05 Sep 2006)

  05 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +hwbrowser-0.27.ebuild:
  A hardware browser
