@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/hwbrowser/Attic/hwbrowser-0.27.ebuild,v 1.2 2006/09/05 21:52:24 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/hwbrowser/Attic/hwbrowser-0.27.ebuild,v 1.3 2007/01/06 23:00:28 dberkholz Exp $
 
 inherit python rpm
 
@@ -20,6 +20,7 @@ RDEPEND="dev-perl/XML-Parser
 	=dev-python/pygtk-2*
 	sys-apps/usermode
 	sys-apps/kudzu
+	dev-python/rhpl
 	>=dev-python/pyparted-1.6"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
